# living-to-tell

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  create_dirs.py  pyproject.toml  sitecustomize.py  writer.spec
.github/workflows/: build-windows.yml  tests.yml
docs/: agent-kickoff-prompt.md  ai-revision-workflow.md  ai-revision-workflow.zh-CN.md  ai-troubleshooting.md  ai-troubleshooting.zh-CN.md  basic-design.md  cloud-ai-strategy.md  codex-style-integration.md  design-decision-checklist.md  development-plan.md  implementation-handoff.md  initial-scaffold.md  m10a-release-notes.md  m10b-release-notes.md  m3-fixes-and-m4a-kickoff-prompt.md  m3-kickoff-prompt.md  m5-projects-and-export-kickoff-prompt.md  m5b-compatibility-hardening-kickoff-prompt.md  m7a-i18n-shell-refresh-kickoff-prompt.md  m8-release-notes.md  m9a-release-notes.md  open-questions.md  open-source-research.md  product-requirements.md  roadmap.md  technical-approach.md  todo.md  todo.zh-CN.md  tutorials.md  tutorials.zh-CN.md  ui-design-refresh.md  user-guide.md  user-guide.zh-CN.md
docs/releases/: v0.2.0-alpha.15.md  v0.2.0-alpha.16.md  v0.2.0-alpha.17.md  v0.2.0-alpha.18.md  v0.2.0-alpha.19.md  v0.2.0-alpha.20.md  v0.2.0-alpha.21.md  v0.2.0-alpha.22.md  v0.2.0-alpha.23.md  v0.2.0-alpha.24.md  v0.2.0-alpha.25.md  v0.2.0-alpha.26.md  v0.2.0-alpha.27.md  v0.2.0-alpha.28.md  v0.2.0-alpha.29.md  v0.2.0-alpha.30.md  v0.2.0-alpha.31.md  v0.2.0-alpha.32.md  v0.2.0-alpha.33.md  v0.2.0-alpha.34.md  v0.2.0-alpha.35.md  v0.2.0-alpha.36.md  v0.2.0-alpha.37.md  v0.2.0-alpha.38.md  v0.2.0-alpha.39.md  v0.2.0-alpha.40.md  v0.2.0-alpha.41.md  v0.2.0-alpha.42.md  v0.2.0-alpha.43.md  v0.2.0-alpha.44.md  v0.2.0-alpha.45.md
docs/screenshots/: README.md
hooks/: rthook_pyside6_dlls.py
scripts/: build_windows.ps1
src/writer/: __init__.py  main.py
tauri-mvp/: .gitignore  CHANGELOG.md  README.md  build-release.ps1  start-dev.bat  start-dev.ps1  start-dev.sh
tauri-mvp/backend/: README.md  app.py  config.py  database.py  deps.py  living-to-tell-backend.spec  models.py  repository.py  requirements.txt  run.py  server.py  version_info.py  writer-backend.spec
tauri-mvp/docs/: TODO.md
tauri-mvp/frontend/: index.html  package-lock.json  package.json  playwright.config.ts  playwright.real.config.ts  vite.config.ts  (+1 more)
tauri-mvp/frontend/src-tauri/: Cargo.toml  generate_icon.py  tauri.conf.json
tauri-mvp/frontend/src-tauri/icons/: icon.icns
tauri-mvp/frontend/src-tauri/nsis/: installer-hooks.nsh
tauri-mvp/frontend/src-tauri/src/: main.rs
tests/: conftest.py  test_autosave_and_main_window.py  test_m3_fixes.py  test_m7a.py  test_smoke_startup.py  test_style_specimens.py  test_tauri_mvp_api.py
(+357 files in other folders)
