[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "writer"
version = "0.2.0a42"
description = "Windows desktop personal writing tool with light AI rewrite assistance."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Writer Project" }]
dependencies = [
    "PySide6>=6.6",
    "openai>=1.40",
    "platformdirs>=4.2",
    "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "ruff>=0.5",
    "pyinstaller>=6.0",
]

[project.scripts]
writer = "writer.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"writer.storage" = ["schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"
